--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,3 +25,11 @@
 
 - name: build and install netdata
   shell: cd /root/netdata && ./netdata-installer.sh --install /opt --dont-wait --dont-start-it creates=/opt/netdata/usr/sbin/netdata
+
+- name: put systemd unit file to its destination
+  template: src=netdata.service dest="/etc/systemd/system/netdata.service" owner=root group=root mode=0644
+  when: "(ansible_distribution == 'Debian' and ansible_distribution_major_version == '8') or (ansible_distribution == 'Ubuntu' and (ansible_distribution_version|version_compare(14.04, '>')))"
+
+- name: enable netdata service
+  service: name="netdata" enabled=yes state=started
+  when: "(ansible_distribution == 'Debian' and ansible_distribution_major_version == '8') or (ansible_distribution == 'Ubuntu' and (ansible_distribution_version|version_compare(14.04, '>')))"
